--- a/First Responsive Website/index.html
+++ b/First Responsive Website/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anmol Tyres and Helmets</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 1000px)" href="css/phone.css">
-    <!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 1000px)" href="phone.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
@@ -20,7 +19,7 @@
             <div class="cube">
                 <div class="top" id="top"></div>
                 <div>
-                    <span style="--i:3;"><img src="logo(black).png" alt="" id="image"></span>
+                    <span style="--i:3;"><img src="Photos\logo(black).png" alt="" id="image"></span>
                     <span style="--i:0;">ANMOL</span>
                     <span style="--i:1;">TYRES</span>
                     <span style="--i:2;">HELMETS</span>
@@ -29,7 +28,7 @@
             </div>
         </div>
         <div id="img">
-            <img src="logo.png" alt="Anmol Tyres and Helmets">
+            <img src="Photos\logo.png" alt="Anmol Tyres and Helmets">
         </div>
         <div class="navbar">
             <nav id="navbar">
@@ -60,7 +59,7 @@
         </h1>
         <div id="products">
             <div class="box">
-                <img src="tyres1.png" alt="Tyres" id="tyreproduct">
+                <img src="Photos\tyres1.png" alt="Tyres" id="tyreproduct">
                 <div class="brands">
                     <img src="brand_logo\Tyres\mrf-tyre.png" alt="">
                     <img src="brand_logo\Tyres\CEAT-tyre.png" alt="">
@@ -70,7 +69,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="helmet.png" alt="Helmets" id="helmetlogo">
+                <img src="Photos\helmet.png" alt="Helmets" id="helmetlogo">
                 <div class="brands">
                     <img src="brand_logo\Helmets\studds-logo.png" alt="">
                     <img src="brand_logo\Helmets\steelbird-logo.jpg" alt="">
