--- a/htmlcode.html
+++ b/htmlcode.html
@@ -19,7 +19,7 @@
             <div class="cube">
                 <div class="top" id="top"></div>
                 <div>
-                    <span style="--i:3;"><img src="Photos\logo(black).png" alt="" id="image"></span>
+                    <span style="--i:3;"><img src="brand_logo\Photos\logo(black).png" alt="" id="image"></span>
                     <span style="--i:0;">ANMOL</span>
                     <span style="--i:1;">TYRES</span>
                     <span style="--i:2;">HELMETS</span>
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div id="img">
-            <img src="Photos\logo.png" alt="Anmol Tyres and Helmets">
+            <img src="brand_logo\Photos\logo.png" alt="Anmol Tyres and Helmets">
         </div>
         <div class="navbar">
             <nav id="navbar">
@@ -59,7 +59,7 @@
         </h1>
         <div id="products">
             <div class="box">
-                <img src="Photos\tyres1.png" alt="Tyres" id="tyreproduct">
+                <img src="brand_logo\Photos\tyres1.png" alt="Tyres" id="tyreproduct">
                 <div class="brands">
                     <img src="brand_logo\Tyres\mrf-tyre.png" alt="">
                     <img src="brand_logo\Tyres\CEAT-tyre.png" alt="">
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="box">
-                <img src="Photos\helmet.png" alt="Helmets" id="helmetlogo">
+                <img src="brand_logo\Photos\helmet.png" alt="Helmets" id="helmetlogo">
                 <div class="brands">
                     <img src="brand_logo\Helmets\studds-logo.png" alt="">
                     <img src="brand_logo\Helmets\steelbird-logo.jpg" alt="">
