--- a/htmlcode.html
+++ b/htmlcode.html
@@ -108,7 +108,7 @@
                 <li>Email :- rajkumaranmol123@gmail.com</li>
             </ul>
         </div>
-        <a href="https://www.google.com/maps/place/ANMOL+TYRES+%26+HELMETS/@23.4980153,84.9868927,17z/data=!3m1!4b1!4m5!3m4!1s0x39f4cd868460ebfd:0xfed59e82bb6cfdb0!8m2!3d23.498011!4d84.9890794" target="_blank" id="loc"><img src="location.png" alt=""></a>
+        <a href="https://www.google.com/maps/place/ANMOL+TYRES+%26+HELMETS/@23.4980153,84.9868927,17z/data=!3m1!4b1!4m5!3m4!1s0x39f4cd868460ebfd:0xfed59e82bb6cfdb0!8m2!3d23.498011!4d84.9890794" target="_blank" id="loc"><img src="brand_logo\Photos\location.png" alt=""></a>
     </footer>
 </body>
 </html>
