--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </p>
     </section>
 
-    <footer id="contactus">
+    <footer id="contactus" style="z-index: -2;">
         <div id="copyright">
             Copyright &copy; <a href="www.anmoltyresandhelmets.com">www.anmoltyresandhelmts.com</a>. All rights reserved!
         </div>
